discussion/kv_engine/162992/162992_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48680: Check key->vBucket mapping on magma outputs

Check the key->vBucket mappings on output from magma.

Change-Id: I02b490b7c207247b159409ef29a30c72f4a1da71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-07 07:24:03.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-07 08:13:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34751/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dockey_validator.cc:27:26:
error: use of undeclared identifier "getGlobalBucketLogger"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40853/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore_config.h(181): error C3646: "getVBucketMappingErrorHandlingMethod": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40853/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13236/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    ErrorHandlingMethod getVBucketMappingErrorHandlingMethod() const {
    ^~~~~~~~~~~~~~~~~~~
    cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:184:47: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    void setVBucketMappingErrorHandlingMethod(ErrorHandlingMethod value) {
                                              ^~~~~~~~~~~~~~~~~~~
                                              cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:370:17: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    std::atomic<ErrorHandlingMethod> vBucketMappingErrorHandlingMethod;
                ^~~~~~~~~~~~~~~~~~~
                cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13236/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13236/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15104/ : FAILURE

Compile error at [2021-10-07T08:05:49.370Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: ?ErrorHandlingMethod? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15104/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15695/ : FAILURE

Compile error at [2021-10-07T08:09:15.334Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15695/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23120/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13981/ : FAILURE

Compile error at [2021-10-07T07:49:11.252Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2851/ : FAILURE

Compile error at [2021-10-07T07:58:02.315Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2888/ : FAILURE

Compile error at [2021-10-07T08:03:36.661Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: ?ErrorHandlingMethod? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2888/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12023/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14832/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
